@@ -4,7 +4,7 @@ Maintainer: Steffen Hoffmann <hoff.st@web.de>
 
 Note: For more history details see older changelog files documenting plugin
 origin, the fork of WikiTicketCalendarMacro and separate development prior to
-formation of the current, bundled macros.
+formation of the current macro bundle.
 
 
 wikicalendar-2.0.0 - new 'bundled macros' revision (not yet released)
@@ -16,10 +16,12 @@ wikicalendar-2.0.0 - new 'bundled macros' revision (not yet released)
  * #6636: Failure on use: "day of month out of range" (in Python 2.4)
  * #7564: Integrate re-worked WikiCalendarMacro in new trunk
  * #7653: Not all matching tickets showing up in calendar
+ * #8818: CSS definitions not read
  * #9568: Can Babel be made an optional component for 0.12?
  * #9718: Resolve relative wiki paths in pattern for wiki pages too
  * #9719: Regression: WikiTicketCalendar doesn't show >1 milestones per day.
  * restored full backwards-compatibility down to Trac 0.11
+ * added wiki page template preselection support to WikiCalendar macro too
 
  new features
  * macro collection based on WikiTicketCalendar `trunk` branch pulled into
